@@ -23,6 +23,7 @@
 \input misc/unique.tex 
 \input misc/intersect.tex 
 \input misc/setxor.tex 
+\input misc/intg.tex 
 
 \section{Matlab compatibility}
 
